<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/calculator" />

        <EditText
            android:id="@+id/firstNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/enter_the_1st_number"
            android:inputType="number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/secNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/enter_the_2nd_number"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/result" />

        <Button
            android:id="@+id/butAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/addition"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/butSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:text="@string/substraction"
            android:textColor="#FBF8F8" />

        <Button
            android:id="@+id/budMul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/multiplication"
            android:textColor="#FBF8F8" />

        <Button
            android:id="@+id/budDiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/division"
            android:textColor="#FBF8F8" />

    </LinearLayout>
</LinearLayout>
